Fixed overflow in main menu UI

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,8 +1,18 @@
-body {
-    width: 100vw;
-    height: 100vh;
+* {
+    margin: 0;
+    padding: 0;
+  }
+
+html {
+    width: 100%;
+    height: 100%;
     overflow: hidden;
     background-color: black;
+}
+
+body {
+    width: 100%;
+    height: 100%;
     color: white;
 }
 
@@ -34,12 +44,10 @@ hr {
     padding: 0;
     margin: 0;
     font-size: 5rem; 
-    /* Use 4 rem for smaller screens */
     text-shadow: 1px 1px 2px white;
 }
 
 .options {
-    /* border: 10px 0px 10px 0; */
     padding: 10px;
     display: flex;
     width: 40%;
@@ -83,7 +91,6 @@ hr {
 .bgImage img{
     width: 95%;
     height: 95%;
-    /* aspect-ratio: 16/9; */
     z-index: -1;
     opacity: .7;
     object-fit: cover;
@@ -93,7 +100,6 @@ hr {
 .bgBorder {
     background: radial-gradient(ellipse, transparent, black 77%);
     content: "";
-    /* background-color: white; */
     width: 100vw;
     height: 100vh;
     z-index: -1;
@@ -124,17 +130,6 @@ hr {
 
 span {
     font-size: 0.5rem;
-}
-
-audio {
-    position: absolute;
-    top: 0;
-    left: 0;
-    margin: 20px 0 0 20px;
-}
-
-audio::-webkit-media-controls-panel {
-    background-color: white;
 }
 
 @media (max-width: 500px) {
